// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubRoutesWrapper renders footer 1`] = `
<div>
  <div>
    <Switch />
  </div>
  <div>
    Footer
  </div>
</div>
`;

exports[`SubRoutesWrapper renders header 1`] = `
<div>
  <div>
    Header
  </div>
  <div>
    <Switch />
  </div>
</div>
`;

exports[`SubRoutesWrapper renders subrouted 1`] = `
<div>
  <div>
    <Switch>
      <Route
        key="0"
        path="/test-path/p1"
        render={[Function]}
      />
      <Route
        key="1"
        path="/test-path/p2"
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;
